--- a/backend/.env
+++ b/backend/.env
@@ -6,10 +6,8 @@ DEBUG=true
 # CORS Configuration
 CORS_ORIGINS=http://localhost:3000,http://localhost:5173
 
-# Database Configuration - PostgreSQL
-DATABASE_URL=postgresql://urbanflow:urbanflow123@localhost:5432/urbanflow_db
-# Alternative pour développement rapide (SQLite):
-# DATABASE_URL=sqlite:///urbanflow.db
+# Database Configuration - SIMPLE SQLite
+DATABASE_URL=sqlite:///urbanflow.db
 
 # Simulation Configuration
 MOCK_MODE=true
@@ -18,3 +16,6 @@ MOCK_TRAFFIC_LIGHT_COUNT=5
 
 # WebSocket Configuration
 SOCKETIO_ASYNC_MODE=eventlet
+"@ | Out-File -FilePath .env -Encoding UTF8
+
+Write-Host "✅ Fichier .env créé avec SQLite"
